--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CadastroWeb - Improved</title>
+  <title>CadastroWeb </title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
 </head>
@@ -54,17 +54,7 @@
             </div>
           </div>
         </div>
-        <div class="card slit-in-diagonal-1">
-          <img src="Diseño_sin_título__4_-removebg-preview.png" alt="Hernán Sosa">
-          <div class="card-content">
-            <h3>Hernán Sosa</h3>
-            <p>Fotos</p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-        </div>
+        
         <div class="card slit-in-diagonal-1">
           <img src="Diseño_sin_título__5_-removebg-preview.png" alt="Mateo Cristaldo">
           <div class="card-content">
@@ -81,7 +71,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 CadastroWeb. Todos los derechos reservados.</p>
+    <p>&copy; 2024 Crismar. Todos los derechos reservados.</p>
   </footer>
 
   <script src="main.js"></script>
