--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="logo">CW</div>
       <ul>
-        <li><a href="#" class="nav-link">Servicios</a></li>
+        <li><a href="https://mateocris02.github.io/sb1-x6ksrr/" class="nav-link">Servicios</a></li>
         <li><a href="#" class="nav-link">Revisión</a></li>
         <li><a href="#" class="nav-link">Photoshop</a></li>
         <li><a href="#" class="nav-link">Descripción</a></li>
